--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   google_nav_bar: ^5.0.6
   carousel_slider: ^4.2.1
   cached_network_image: ^3.2.3
-
+  page_transition: ^2.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
