--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   page_transition: ^2.1.0
   provider: ^6.0.5
   flutter_svg: ^2.0.7
+  dio: ^5.3.2
+  logging: ^1.2.0
 
 dev_dependencies:
   flutter_test:
