--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,10 @@ dependencies:
   google_nav_bar: ^5.0.6
   carousel_slider: ^4.2.1
   cached_network_image: ^3.2.3
-  page_transition: ^2.1.0
   provider: ^6.0.5
   flutter_svg: ^2.0.7
   dio: ^5.3.2
-  logging: ^1.2.0
+  dots_indicator: ^2.1.0
 
 dev_dependencies:
   flutter_test:
